--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Test Page</title>
+	<title>Login And Registration Form</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+   <div class="hero">
+   	  <div class="form-box"></div>
+   </div>
 </body>
 </html>
